@@ -18,6 +18,7 @@ Features
 Bugfixes
 --------
 
+* Fix Windows crash with calendar locales (Issue #2332)
 * Remove the (useless) ``<base>`` tag by default; change conf.py to
   opt in (Issue #2471)
 * Show tag descriptions when TAG_PAGES_ARE_INDEXES is True (Issue #2444)
